Restructered Underlying JSON  - Changed JSON to be stored in array form, this makes it easier to manipulate for the client  - Added Masonry.js support, not fully implemented yet  - Added misc styling redesigns

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "nodemon": "^1.18.4"
   },
   "author": "Charles Williams",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "masonry-layout": "^4.2.2"
+  }
 }
