Added a bit more MasonryJS Stuff  - It's having issues dynamically adding elements when set to a percentage width, so I'm calling it off  - currently elements will be sized based on a fixed pixel width  - Reorganized columns

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Charles Williams",
   "license": "ISC",
   "dependencies": {
+    "imagesloaded": "^4.1.4",
     "masonry-layout": "^4.2.2"
   }
 }
